--- a/force-app/main/tests/classes/Test_ParticipantDuplicateService.cls
+++ b/force-app/main/tests/classes/Test_ParticipantDuplicateService.cls
@@ -95,13 +95,13 @@ private class Test_ParticipantDuplicateService {
         System.assert(duplicateService.findDuplicate(noBirthYearFirstNameMatch) != null,
                 'Case: "No BirthYear, First name match". Duplicate must be found for ' + JSON.serializePretty(noBirthYearFirstNameMatch));
         System.assert(duplicateService.findDuplicate(noBirthYearFirstNameNotMatch) == null,
-                'Case "No BirthYear, First name not match". No duplicate must be found for: ' + JSON.serializePretty(noBirthYearFirstNameNotMatch));
+                'Case: "No BirthYear, First name not match". No duplicate must be found for: ' + JSON.serializePretty(noBirthYearFirstNameNotMatch));
         System.assert(duplicateService.findDuplicate(withBirthYear) != null,
-                'Case "With BirthYear, BirthYear exists in the system, First name match". Duplicate must be found for: ' + JSON.serializePretty(withBirthYear));
+                'Case: "With BirthYear, BirthYear exists in the system, First name match". Duplicate must be found for: ' + JSON.serializePretty(withBirthYear));
         System.assert(duplicateService.findDuplicate(withBirthYearButNoBYInTheInTheSystemAgeMore18) != null,
-                'Case "With BirthYear, No BirthYear in the system, Age > 18, Name match". Duplicate must be found for: ' + JSON.serializePretty(withBirthYearButNoBYInTheInTheSystemAgeMore18));
+                'Case: "With BirthYear, No BirthYear in the system, Age > 18, Name match". Duplicate must be found for: ' + JSON.serializePretty(withBirthYearButNoBYInTheInTheSystemAgeMore18));
         System.assert(duplicateService.findDuplicate(withBYButNoBYInTheInTheSystemAgeMore18NameNotMatch) == null,
-                'Case "With BirthYear, No BirthYear in the system, Age > 18, Name not match". No duplicate must be found for: ' + JSON.serializePretty(withBYButNoBYInTheInTheSystemAgeMore18NameNotMatch));
+                'Case: "With BirthYear, No BirthYear in the system, Age > 18, Name not match". No duplicate must be found for: ' + JSON.serializePretty(withBYButNoBYInTheInTheSystemAgeMore18NameNotMatch));
         System.assert(duplicateService.findDuplicate(withBYButNoBYInTheInTheSystemAgeLow18) == null,
                 'Case "With BirthYear, No BirthYear in the system, Age <= 18". No duplicate must be found for: ' + JSON.serializePretty(withBYButNoBYInTheInTheSystemAgeLow18));
 
